--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,18 @@
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2
+# ===========================================
+# H2 Database
+# ===========================================
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.jpa.hibernate.ddl-auto=create
+debug=true
+
+# ===========================================
+# MySQL Database
+# ===========================================
 #spring.jpa.hibernate.ddl-auto=create
-#debug=true
-
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/security_demo
-spring.datasource.username=root
-spring.datasource.password=password
-useSSL=false
-spring.jpa.show-sql=true
-
-server.port=8090
+#spring.datasource.url=jdbc:mysql://localhost:3306/security_demo
+#spring.datasource.username=root
+#spring.datasource.password=password
+#useSSL=false
+#spring.jpa.show-sql=true
