--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+cloud.name=rmundhra2003
+cloud.secret=YFDRQAO9dvqOdevacgk2X9veA-Q
+cloud.key=985221978378535
+
 # ===========================================
 # H2 Database
 # ===========================================
