--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ cloud.key=985221978378535
 # ===========================================
 # H2 Database
 # ===========================================
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:exampledb
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.jpa.hibernate.ddl-auto=create
