commit for heroku'

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,21 @@ cloud.name=rmundhra2003
 cloud.secret=YFDRQAO9dvqOdevacgk2X9veA-Q
 cloud.key=985221978378535
 
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.show-sql=false
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+
 # ===========================================
 # H2 Database
 # ===========================================
-spring.datasource.url=jdbc:h2:mem:exampledb
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-spring.jpa.hibernate.ddl-auto=create
-debug=true
+#spring.datasource.url=jdbc:h2:mem:exampledb
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
+#spring.jpa.hibernate.ddl-auto=create
+#debug=true
 
 # ===========================================
 # MySQL Database
